crates/php-parser/tests/snapshots/integration__dnf_type_union_of_intersections.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php function foo((Countable&Traversable)|(ArrayAccess&Stringable) $x): void {}
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "foo",
          "params": [
            {
              "name": "x",
              "type_hint": {
                "kind": {
                  "Union": [
                    {
                      "kind": {
                        "Intersection": [
                          {
                            "kind": {
                              "Named": {
                                "parts": [
                                  "Countable"
                                ],
                                "kind": "Unqualified",
                                "span": {
                                  "start": 20,
                                  "end": 29
                                }
                              }
                            },
                            "span": {
                              "start": 20,
                              "end": 29
                            }
                          },
                          {
                            "kind": {
                              "Named": {
                                "parts": [
                                  "Traversable"
                                ],
                                "kind": "Unqualified",
                                "span": {
                                  "start": 30,
                                  "end": 41
                                }
                              }
                            },
                            "span": {
                              "start": 30,
                              "end": 41
                            }
                          }
                        ]
                      },
                      "span": {
                        "start": 19,
                        "end": 42
                      }
                    },
                    {
                      "kind": {
                        "Intersection": [
                          {
                            "kind": {
                              "Named": {
                                "parts": [
                                  "ArrayAccess"
                                ],
                                "kind": "Unqualified",
                                "span": {
                                  "start": 44,
                                  "end": 55
                                }
                              }
                            },
                            "span": {
                              "start": 44,
                              "end": 55
                            }
                          },
                          {
                            "kind": {
                              "Named": {
                                "parts": [
                                  "Stringable"
                                ],
                                "kind": "Unqualified",
                                "span": {
                                  "start": 56,
                                  "end": 66
                                }
                              }
                            },
                            "span": {
                              "start": 56,
                              "end": 66
                            }
                          }
                        ]
                      },
                      "span": {
                        "start": 43,
                        "end": 67
                      }
                    }
                  ]
                },
                "span": {
                  "start": 19,
                  "end": 67
                }
              },
              "default": null,
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 19,
                "end": 70
              }
            }
          ],
          "body": [],
          "return_type": {
            "kind": {
              "Named": {
                "parts": [
                  "void"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 73,
                  "end": 77
                }
              }
            },
            "span": {
              "start": 73,
              "end": 77
            }
          },
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 80
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 80
  }
}
