crates/php-parser/tests/snapshots/integration__dnf_type_with_null.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(&result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "foo",
          "params": [
            {
              "name": "x",
              "type_hint": {
                "kind": {
                  "Union": [
                    {
                      "kind": {
                        "Intersection": [
                          {
                            "kind": {
                              "Named": {
                                "parts": [
                                  "Countable"
                                ],
                                "kind": "Unqualified",
                                "span": {
                                  "start": 20,
                                  "end": 29
                                }
                              }
                            },
                            "span": {
                              "start": 20,
                              "end": 29
                            }
                          },
                          {
                            "kind": {
                              "Named": {
                                "parts": [
                                  "Traversable"
                                ],
                                "kind": "Unqualified",
                                "span": {
                                  "start": 30,
                                  "end": 41
                                }
                              }
                            },
                            "span": {
                              "start": 30,
                              "end": 41
                            }
                          }
                        ]
                      },
                      "span": {
                        "start": 19,
                        "end": 42
                      }
                    },
                    {
                      "kind": {
                        "Named": {
                          "parts": [
                            "null"
                          ],
                          "kind": "Unqualified",
                          "span": {
                            "start": 43,
                            "end": 47
                          }
                        }
                      },
                      "span": {
                        "start": 43,
                        "end": 47
                      }
                    }
                  ]
                },
                "span": {
                  "start": 19,
                  "end": 47
                }
              },
              "default": null,
              "by_ref": false,
              "variadic": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 19,
                "end": 50
              }
            }
          ],
          "body": [],
          "return_type": {
            "kind": {
              "Union": [
                {
                  "kind": {
                    "Intersection": [
                      {
                        "kind": {
                          "Named": {
                            "parts": [
                              "A"
                            ],
                            "kind": "Unqualified",
                            "span": {
                              "start": 54,
                              "end": 55
                            }
                          }
                        },
                        "span": {
                          "start": 54,
                          "end": 55
                        }
                      },
                      {
                        "kind": {
                          "Named": {
                            "parts": [
                              "B"
                            ],
                            "kind": "Unqualified",
                            "span": {
                              "start": 56,
                              "end": 57
                            }
                          }
                        },
                        "span": {
                          "start": 56,
                          "end": 57
                        }
                      }
                    ]
                  },
                  "span": {
                    "start": 53,
                    "end": 58
                  }
                },
                {
                  "kind": {
                    "Named": {
                      "parts": [
                        "null"
                      ],
                      "kind": "Unqualified",
                      "span": {
                        "start": 59,
                        "end": 63
                      }
                    }
                  },
                  "span": {
                    "start": 59,
                    "end": 63
                  }
                }
              ]
            },
            "span": {
              "start": 53,
              "end": 63
            }
          },
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 66
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 66
  }
}
