crates/php-parser/tests/snapshots/integration__do_while.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php do { echo $i; $i++; } while ($i < 10);
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "DoWhile": {
          "body": {
            "kind": {
              "Block": [
                {
                  "kind": {
                    "Echo": [
                      {
                        "kind": {
                          "Variable": "i"
                        },
                        "span": {
                          "start": 16,
                          "end": 18
                        }
                      }
                    ]
                  },
                  "span": {
                    "start": 11,
                    "end": 20
                  }
                },
                {
                  "kind": {
                    "Expression": {
                      "kind": {
                        "UnaryPostfix": {
                          "operand": {
                            "kind": {
                              "Variable": "i"
                            },
                            "span": {
                              "start": 20,
                              "end": 22
                            }
                          },
                          "op": "PostIncrement"
                        }
                      },
                      "span": {
                        "start": 20,
                        "end": 24
                      }
                    }
                  },
                  "span": {
                    "start": 20,
                    "end": 26
                  }
                }
              ]
            },
            "span": {
              "start": 9,
              "end": 27
            }
          },
          "condition": {
            "kind": {
              "Binary": {
                "left": {
                  "kind": {
                    "Variable": "i"
                  },
                  "span": {
                    "start": 35,
                    "end": 37
                  }
                },
                "op": "Less",
                "right": {
                  "kind": {
                    "Int": 10
                  },
                  "span": {
                    "start": 40,
                    "end": 42
                  }
                }
              }
            },
            "span": {
              "start": 35,
              "end": 42
            }
          }
        }
      },
      "span": {
        "start": 6,
        "end": 44
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 44
  }
}
