crates/php-parser/tests/snapshots/integration__doc_comment_vs_block_comment.snap
---
source: crates/php-parser/tests/integration.rs
expression: result_snapshot(&result)
---
=== program ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "x"
                },
                "span": {
                  "start": 56,
                  "end": 58
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Int": 1
                },
                "span": {
                  "start": 61,
                  "end": 62
                }
              }
            }
          },
          "span": {
            "start": 56,
            "end": 62
          }
        }
      },
      "span": {
        "start": 56,
        "end": 63
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 63
  }
}

=== comments ===
[
  {
    "kind": "Doc",
    "text": "/** doc */",
    "span": {
      "start": 6,
      "end": 16
    }
  },
  {
    "kind": "Block",
    "text": "/* block */",
    "span": {
      "start": 17,
      "end": 28
    }
  },
  {
    "kind": "Block",
    "text": "/**/",
    "span": {
      "start": 29,
      "end": 33
    }
  },
  {
    "kind": "Block",
    "text": "/* empty-ish block */",
    "span": {
      "start": 34,
      "end": 55
    }
  }
]
