crates/php-parser/tests/snapshots/integration__double_quoted_escape_sequences.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php echo "line1\nline2\ttab";
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Echo": [
          {
            "kind": {
              "String": "line1\nline2\ttab"
            },
            "span": {
              "start": 11,
              "end": 30
            }
          }
        ]
      },
      "span": {
        "start": 6,
        "end": 31
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 31
  }
}
